--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
+    <h2>Hello go it</h2>
     <!-- <script src="./js/index.js"></script> -->
     <!-- <script src="./js/numbers.js"></script> -->
-    <!-- <script src="./js/strings.js"></script> -->
+    <!-- <script type="module" src="./js/strings.js"></script> -->
     <!-- <script src="./js/comparisons-operators.js"></script> -->
     <script src="./js/logic-operators.js"></script>
+    <!-- <script src="./js/index.js" ></script> -->
 </body>
 
 </html>
